--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "db-migrate": "^0.11.13",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "pg": "^8.7.1"
   }
